--- a/screen.css
+++ b/screen.css
@@ -1,4 +1,51 @@
-/* Add screen styles below */
-a.active {
-    font-weight: bold;
+body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #1B1F3B;
+  color: #F7F7FF;
+}
+
+
+.images {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.images img {
+  width: 500px;
+  height: auto;
+  cursor: pointer;
+}
+
+.images img:hover{
+  
+  transform: scale(1.1);
+}
+
+.earth {
+  display: flex;
+  text-align: left;
+  padding: 30px;
+  margin-top: 20px;
+}
+
+.einfo {
+  display: flex;
+  text-align: center;
+  padding: 30px;
+}
+
+.moon {
+  display: flex;
+  text-align: left;
+  padding: 30px;
+  margin-top: 20px;
+}
+
+.minfo {
+  display: flex;
+  text-align: center;
+  padding: 30px;
 }
